# embeddable-config

./: .travis.yml  Cargo.toml  Makefile  README.md  rust-toolchain
assets/: sample.json  simple.json  simple.toml  simple.yaml
src/: lib.rs
