[package]
name = "embeddable-config"
version = "0.1.0"
authors = ["Shinichi Kogai <kogai0121@gmail.com>"]

[badges]
travis-ci = { repository = "kogai/embeddable-config" }

[dependencies]
serde = "1.0.60"
serde_json = { version = "1.0.17", optional = true }

[dev-dependencies]
serde_derive = "1.0.60"

[features]
default = []
test = ["serde_json"]
